plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5' // Ajustado para uma versão 3.x estável compatível com Java 21
	id 'io.spring.dependency-management' version '1.1.7'
}

// CORRIGIDO: Adicionado a letra "o" em plataformadecurso para bater com seus arquivos Java
group = 'plataformadecurso.demo'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

	// Lombok (Código Principal e Testes)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// Banco de Dados
	runtimeOnly 'com.h2database:h2'
	// runtimeOnly 'org.postgresql:postgresql'

	// Testes
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	// EXIGIDO PELA DOCUMENTAÇÃO: Garante que o Gradle encontre as classes de teste JUnit 5
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}